--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 <!-- footer -->
 
 <footer>
-  <p class="text-center text-white bg-dark">@copyright Thapatechnical.com 2021</p>
+  <p class="text-center text-white bg-dark">@copyright Aman Sagar </p>
 </footer>
 
 
